🐛 Possible fix for Windows dark mode showing select with white text and white background

--- a/frontend/shared/scss/base/dark-modus.scss
+++ b/frontend/shared/scss/base/dark-modus.scss
@@ -7,7 +7,6 @@ body, :host {
 
 body.dark, :host.dark {
     // Force dark
-    color-scheme: dark;
     @include dark-modus;
 }
 
